# mtcnn-android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wisesoft/mtcnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mtcnn.cpp  mtcnn.h  mtcnn_jni.cpp  native-lib.cpp
app/src/main/java/com/wisesoft/mtcnn/: MTCNN.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/wisesoft/mtcnn/: ExampleUnitTest.java
